Added apply action instead of set joints for stream. Added fallback for damping and stiffness
